change the PushKey structure